gitops/manifests/prod/autoconfig/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoconfig
  namespace: prod
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: autoconfig
  template:
    metadata:
      labels:
        app: autoconfig
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: xml
              mountPath: /usr/share/nginx/html/mail
            - name: conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi
      volumes:
        - name: xml
          configMap:
            name: autoconfig-xml
            items:
              - key: config-v1.1.xml
                path: config-v1.1.xml
        - name: conf
          configMap:
            name: autoconfig-xml
            items:
              - key: nginx.conf
                path: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  name: autoconfig
  namespace: prod
spec:
  selector:
    app: autoconfig
  ports:
    - port: 80
      targetPort: 80
