gitops/manifests/prod/autoconfig/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autoconfig
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - autoconfig.aramakisai.com
      secretName: autoconfig-tls
  rules:
    - host: autoconfig.aramakisai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: autoconfig
                port:
                  number: 80
